--- a/周赛解题报告/contest_163/1262.md
+++ b/周赛解题报告/contest_163/1262.md
@@ -1,33 +1,55 @@
 题目链接:<https://leetcode-cn.com/problems/greatest-sum-divisible-by-three/>  
 
-首先很容易想到dfs，每个数字两种选择，取或者不取，但是看数据规模，应该会超时，所以直接pass，然后再看了下题目，肯定是考dp，所以接下来的问题就是推公式。  
+首先很容易想到dfs，每个数字两种选择，取或者不取，但是看数据规模，应该会超时，所以直接pass，然后再看了下题目，想到dp，所以接下来的问题就是推公式。  
 我们知道，一个数模3只有3种结果，0，1，2，那么假设dp[i]表示选取的数字之和(满足模3等于i)，那么  
-1.i==0时，dp[0] = max(dp[0])
+1.i==0时，dp[0] = max(dp[0],dp[0] + v)
 
 ```
-func oddCells(n int, m int, indices [][]int) int {
-	arr := make([][]int,0)
-	for i := 0; i < n; i++{
-		temp := make([]int,m)
-		arr = append(arr,temp)
+func maxInt(a, b int) int {
+	if a > b {
+		return a
 	}
-	for _,v := range indices{
-		for i := 0; i < m; i++{
-			arr[v[0]][i]++
-		}
-		for i := 0; i < n; i++{
-			arr[i][v[1]]++
-		}
-	}
-	//fmt.Println(arr)
-	ans := 0
-	for i := 0; i < n; i++{
-		for j := 0; j < m; j++{
-			if arr[i][j] % 2 != 0{
-				ans++
+	return b
+}
+
+func maxSumDivThree(nums []int) int {
+	dp := make([]int, 3)
+	for _, v := range nums {
+		mod := v % 3
+		s0,s1,s2 := dp[0],dp[1],dp[2]
+		if mod == 0 {
+			if (s0+v)%3 == 0 {
+				dp[0] = maxInt(s0,s0 + v)
+			}
+			if (s1 + v)%3 == 1{
+				dp[1] = maxInt(s1,s1 + v)
+			}
+			if (s2 + v)%3 == 2{
+				dp[2] = maxInt(s2,s2 + v)
+			}
+		}else if mod == 1{
+			if (s2+v)%3 == 0 {
+				dp[0] = maxInt(s0,s2+v)
+			}
+			if (s0 + v)%3 == 1{
+				dp[1] = maxInt(s1,s0 + v)
+			}
+			if (s1 + v)%3 == 2{
+				dp[2] = maxInt(s2,s1 + v)
+			}
+		}else if mod == 2{
+			if (s1+v)%3 == 0 {
+				dp[0] = maxInt(s0,s1+v)
+			}
+			if (s2 + v)%3 == 1{
+				dp[1] = maxInt(s1,s2 + v)
+			}
+			if (s0 + v)%3 == 2{
+				dp[2] = maxInt(s2,s0 + v)
 			}
 		}
+		//fmt.Println(dp)
 	}
-	return  ans
+	return dp[0]
 }
 ```
