--- a/周赛解题报告/contest_163/1262.md
+++ b/周赛解题报告/contest_163/1262.md
@@ -1,8 +1,7 @@
 题目链接:<https://leetcode-cn.com/problems/greatest-sum-divisible-by-three/>  
 
 首先很容易想到dfs，每个数字两种选择，取或者不取，但是看数据规模，应该会超时，所以直接pass，然后再看了下题目，想到dp，所以接下来的问题就是推公式。  
-我们知道，一个数模3只有3种结果，0，1，2，那么假设dp[i]表示选取的数字之和(满足模3等于i)，那么  
-1.i==0时，dp[0] = max(dp[0],dp[0] + v)
+我们知道，一个数模3只有3种结果，0，1，2，那么假设dp[i]表示选取的数字之和(满足模3等于i)，那么对于某个数a,求得mod = a % 3，然后分别更新dp[0],dp[1],dp[2]的值，注意先要用中间变量将dp数组的值保存下来 
 
 ```
 func maxInt(a, b int) int {
