--- a/周赛解题报告/contest_168/1296.md
+++ b/周赛解题报告/contest_168/1296.md
@@ -1,6 +1,6 @@
 题目链接:<https://leetcode-cn.com/problems/divide-array-in-sets-of-k-consecutive-numbers/>  
 
-水题，给你一个整数数组 nums，请你返回其中位数为 偶数 的数字的个数
+记录nums中各数出现的次数，因为map是无序的，这里先将keys从小到大排序，然后每次取出最小的数i，假设有n个，依题意，i,i+1,...i+k-1计数需要分别减去n个，若满足条件继续，不满足条件返回false
 
 ```
 func isPossibleDivide(nums []int, k int) bool {
