--- a/周赛解题报告/contest_168/1297.md
+++ b/周赛解题报告/contest_168/1297.md
@@ -2,7 +2,9 @@
 
 应该很多人GG在题意上，读懂题意后，那么首先想到先把符合要求的子集挑选出来  
 
-暴力法，数据应该比较水，可以AC
+暴力法，数据比较水，可以AC  
+无序映射的底层实现本质是哈希算法，无论是保存字符串的值或引用，在将字符串加入无序映射时，都需要花费一定时间计算字符串的哈希值，不同语言计算字符串哈希值的方式不同，但时间复杂度均为o(n)  
+假设字符串长度为n，满足条件的子串长度为s，所以时间复杂度为o(n*s^2)   
 ```
 func maxFreq(s string, maxLetters int, minSize int, maxSize int) int {
 	ans := 0
@@ -24,5 +26,28 @@ func maxFreq(s string, maxLetters int, minSize int, maxSize int) int {
 		}
 	}
 	return ans
+}
+```
+后来想到，假设字符串str满足条件，那么它的子串(长度大于minSize的)也一定满足条件，因此maxSize是干扰条件，这里只需要考虑长度为minSize的子串就行，时间复杂度o(n*s)
+```
+func maxFreq(s string, maxLetters int, minSize int, maxSize int) int {
+    ans := 0
+	record := make(map[string]int)
+	n := len(s)
+	for i := 0; i < n - minSize + 1; i++{
+		str := s[i:i+minSize]
+		exist := make(map[byte]bool)
+		for j := 0; j < len(str); j++{
+			exist[str[j]] = true
+		}
+		if len(exist) > maxLetters{
+			continue
+		}
+        //fmt.Println(str)
+		record[str]++
+		ans = int(math.Max(float64(ans),float64(record[str])))
+	}
+	return ans
+
 }
 ```
