--- a/周赛解题报告/contest_170/1310.md
+++ b/周赛解题报告/contest_170/1310.md
@@ -23,14 +23,14 @@ func xorQueries(arr []int, queries [][]int) []int {
 }
 ```
 
-进一步想到,由于异或的特性
+进一步想到,由于异或的特性  
 arr[0:i-1] = arr[0]^arr[1]^...^arr[i-1]  
 arr[0:j] = arr[0]^arr[1]^...^arr[i-1]^a[i]^...^arr[j]  
 由上述公式可推出  
 arr[i:j] = arr[0:i-1]^arr[0:j]  
 所以只需遍历一次求出数组arr第0位到每一位的异或值并存储下来就可以快速查询  
 
-效率提升很高，92ms,13.3M,
+效率提升很高，92ms,13.3M
 ```
 func xorQueries(arr []int, queries [][]int) []int {
 	ans := make([]int, 0)
